utoipa-gen/tests/snapshots/schema_derive_test__derive_schema_with_ignore_enum.snap
---
source: utoipa-gen/tests/schema_derive_test.rs
assertion_line: 3090
expression: value
---
{
  "properties": {
    "value": {
      "type": "string"
    }
  },
  "required": [
    "value"
  ],
  "type": "object"
}
