utoipa-gen/tests/snapshots/schema_derive_test__derive_schema_with_ignore_eq_call_field.snap
---
source: utoipa-gen/tests/schema_derive_test.rs
expression: value
---
{
  "properties": {
    "this_is_not_private": {
      "type": "string"
    },
    "value": {
      "type": "string"
    }
  },
  "required": [
    "value",
    "this_is_not_private"
  ],
  "type": "object"
}
