utoipa-gen/tests/snapshots/schema_derive_test__derive_schema_with_multiple_schema_attributes.snap
---
source: utoipa-gen/tests/schema_derive_test.rs
expression: value
snapshot_kind: text
---
{
  "properties": {
    "name": {
      "maxLength": 10,
      "minLength": 5,
      "type": "string"
    }
  },
  "required": [
    "name"
  ],
  "type": "object"
}
