utoipa-gen/tests/snapshots/schema_derive_test__derive_schema_with_object_type_description.snap
---
source: utoipa-gen/tests/schema_derive_test.rs
expression: value
snapshot_kind: text
---
{
  "properties": {
    "object": {
      "description": "This is object value",
      "type": "object"
    }
  },
  "required": [
    "object"
  ],
  "type": "object"
}
