utoipa-gen/tests/snapshots/schema_derive_test__derive_schema_with_object_type_example.snap
---
source: utoipa-gen/tests/schema_derive_test.rs
expression: value
---
{
  "properties": {
    "object": {
      "example": {
        "foo": "bar"
      },
      "type": "object"
    }
  },
  "required": [
    "object"
  ],
  "type": "object"
}
