utoipa-gen/tests/snapshots/schema_derive_test__derive_schema_with_slice_and_array.snap
---
source: utoipa-gen/tests/schema_derive_test.rs
expression: value
snapshot_kind: text
---
{
  "properties": {
    "array": {
      "items": {
        "type": "string"
      },
      "type": "array"
    },
    "slice": {
      "items": {
        "type": "string"
      },
      "type": "array"
    }
  },
  "required": [
    "array",
    "slice"
  ],
  "type": "object"
}
