utoipa-gen/tests/snapshots/schema_derive_test__derive_schema_with_unit_hashmap.snap
---
source: utoipa-gen/tests/schema_derive_test.rs
expression: value
snapshot_kind: text
---
{
  "properties": {
    "volumes": {
      "additionalProperties": {
        "additionalProperties": {
          "default": null
        },
        "propertyNames": {
          "default": null
        },
        "type": "object"
      },
      "propertyNames": {
        "type": "string"
      },
      "type": "object"
    }
  },
  "required": [
    "volumes"
  ],
  "type": "object"
}
