utoipa-gen/tests/snapshots/schema_derive_test__derive_schema_with_value_type_example.snap
---
source: utoipa-gen/tests/schema_derive_test.rs
expression: value
---
{
  "properties": {
    "any": {
      "example": {
        "foo": "bar"
      }
    }
  },
  "required": [
    "any"
  ],
  "type": "object"
}
