utoipa-gen/tests/snapshots/schema_derive_test__derive_serde_flatten-2.snap
---
source: utoipa-gen/tests/schema_derive_test.rs
expression: value
snapshot_kind: text
---
{
  "allOf": [
    {
      "$ref": "#/components/schemas/Record"
    },
    {
      "$ref": "#/components/schemas/Pagination"
    },
    {
      "properties": {
        "id": {
          "type": "string"
        }
      },
      "required": [
        "id"
      ],
      "type": "object"
    }
  ]
}
